[package]
name = "redis-serde"
version = "0.1.0"
edition = "2021"
authors = ["Pepeye <Pepeye@users.noreply.github.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"

